--- a/Learning/pom.xml
+++ b/Learning/pom.xml
@@ -14,6 +14,7 @@
 					<earSourceDirectory>EarContent</earSourceDirectory>
 					<version>7</version>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
+					<outputDirectory>D:\development\wildfly-10.1.0.Final\standalone\deployments</outputDirectory>
 					<modules>
 						<ejbModule>
 							<groupId>LearningEJB</groupId>
