--- a/LearningWeb/.settings/oracle.eclipse.tools.webtier.ui.prefs
+++ b/LearningWeb/.settings/oracle.eclipse.tools.webtier.ui.prefs
@@ -15,6 +15,7 @@
 //_hiddenCategory_\:http\://java.sun.com/jstl/sql_rt=false
 //_hiddenCategory_\:http\://java.sun.com/jstl/xml=false
 //_hiddenCategory_\:http\://java.sun.com/jstl/xml_rt=false
+//_hiddenCategory_\:http\://jboss.com/products/seam/taglib=false
 //_hiddenCategory_\:http\://mojarra.dev.java.net/mojarra_ext=true
 //_hiddenCategory_\:http\://www.bea.com/workshop/jsp-directives-1.0=false
 _hiddenCategory_\:HTML=false
