--- a/Learning/pom.xml
+++ b/Learning/pom.xml
@@ -3,7 +3,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Learning</groupId>
 	<artifactId>Learning</artifactId>
-	<version>1.0</version>
 	<packaging>ear</packaging>
 	<build>
 		<plugins>
@@ -14,7 +13,7 @@
 					<earSourceDirectory>EarContent</earSourceDirectory>
 					<version>7</version>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
-					<outputDirectory>D:\development\wildfly-10.1.0.Final\standalone\deployments</outputDirectory>
+					<outputDirectory>C:\apo\development\wildfly-12.0.0.Final\standalone\deployments</outputDirectory>
 					<modules>
 						<ejbModule>
 							<groupId>LearningEJB</groupId>
@@ -45,4 +44,9 @@
 			<type>war</type>
 		</dependency>
 	</dependencies>
+	<parent>
+		<groupId>LearningParent</groupId>
+		<artifactId>LearningParent</artifactId>
+		<version>1.0</version>
+	</parent>
 </project>
