--- a/LearningWeb/WebContent/WEB-INF/web.xml
+++ b/LearningWeb/WebContent/WEB-INF/web.xml
@@ -1,21 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>LearningWeb</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>Faces Servlet</servlet-name>
-    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>/faces/*</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>LearningWeb</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>Faces Servlet</servlet-name>
+		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>/faces/*</url-pattern>
+	</servlet-mapping>
+
+	<!-- No application subclass present -->
+	<!-- <servlet-mapping> -->
+	<!-- <servlet-name>javax.ws.rs.core.Application</servlet-name> -->
+	<!-- <url-pattern>/PersonApp/*</url-pattern> -->
+	<!-- </servlet-mapping> -->
+
+	<!-- Application subclass present without @ApplicationPath and there is -->
+	<!-- already a servlet defined -->
+	<!-- <servlet> -->
+	<!-- <servlet-name>javax.ws.rs.core.Application</servlet-name> -->
+	<!-- <init-param> -->
+	<!-- <param-name>javax.ws.rs.Application</param-name> -->
+	<!-- <param-value>web.learning.services.rest.RestApp</param-value> -->
+	<!-- </init-param> -->
+	<!-- </servlet> -->
+	<!-- <servlet-mapping> -->
+	<!-- <servlet-name>javax.ws.rs.core.Application</servlet-name> -->
+	<!-- <url-pattern>/PersonApp/*</url-pattern> -->
+	<!-- </servlet-mapping> -->
+
+
+
+	<!-- Application subclass present without @ApplicationPath and without a 
+		servlet defined -->
+	<servlet-mapping>
+		<servlet-name>web.learning.services.rest.RestApp</servlet-name>
+		<url-pattern>/PersonApp/*</url-pattern>
+	</servlet-mapping>
+
+	<!-- Application subclass present with @ApplicationPath and without a servlet 
+		defined no need web.xml config -->
+
 </web-app>
