--- a/LearningParent/pom.xml
+++ b/LearningParent/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>LearningParent</groupId>
@@ -6,8 +7,8 @@
 	<version>1.0</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>../javaee/java-ee/LearningEJB</module>
-		<module>../javaee/java-ee/LearningWeb</module>
-		<module>../javaee/java-ee/Learning</module>
+		<module>../Learning</module>
+		<module>../LearningEJB</module>
+		<module>../LearningWeb</module>
 	</modules>
 </project>
