--- a/LearningWeb/WebContent/WEB-INF/web.xml
+++ b/LearningWeb/WebContent/WEB-INF/web.xml
@@ -5,12 +5,7 @@
 	version="3.1">
 	<display-name>LearningWeb</display-name>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
+		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -21,37 +16,8 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>/faces/*</url-pattern>
 	</servlet-mapping>
-
-	<!-- No application subclass present -->
-	<!-- <servlet-mapping> -->
-	<!-- <servlet-name>javax.ws.rs.core.Application</servlet-name> -->
-	<!-- <url-pattern>/PersonApp/*</url-pattern> -->
-	<!-- </servlet-mapping> -->
-
-	<!-- Application subclass present without @ApplicationPath and there is -->
-	<!-- already a servlet defined -->
-	<!-- <servlet> -->
-	<!-- <servlet-name>javax.ws.rs.core.Application</servlet-name> -->
-	<!-- <init-param> -->
-	<!-- <param-name>javax.ws.rs.Application</param-name> -->
-	<!-- <param-value>web.learning.services.rest.RestApp</param-value> -->
-	<!-- </init-param> -->
-	<!-- </servlet> -->
-	<!-- <servlet-mapping> -->
-	<!-- <servlet-name>javax.ws.rs.core.Application</servlet-name> -->
-	<!-- <url-pattern>/PersonApp/*</url-pattern> -->
-	<!-- </servlet-mapping> -->
-
-
-
-	<!-- Application subclass present without @ApplicationPath and without a 
-		servlet defined -->
 	<servlet-mapping>
 		<servlet-name>web.learning.services.rest.RestApp</servlet-name>
 		<url-pattern>/PersonApp/*</url-pattern>
 	</servlet-mapping>
-
-	<!-- Application subclass present with @ApplicationPath and without a servlet 
-		defined no need web.xml config -->
-
 </web-app>
