--- a/Learning/pom.xml
+++ b/Learning/pom.xml
@@ -8,12 +8,12 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-ear-plugin</artifactId>
-				<version>2.10</version>
+				<version>2.9</version>
 				<configuration>
 					<earSourceDirectory>EarContent</earSourceDirectory>
 					<version>7</version>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
-					<outputDirectory>C:\apo\development\wildfly-12.0.0.Final\standalone\deployments</outputDirectory>
+					<outputDirectory>E:\development\wildfly-12.0.0.Final\standalone\deployments</outputDirectory>
 					<modules>
 						<ejbModule>
 							<groupId>LearningEJB</groupId>
