--- a/Learning/pom.xml
+++ b/Learning/pom.xml
@@ -13,7 +13,7 @@
 					<earSourceDirectory>EarContent</earSourceDirectory>
 					<version>7</version>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
-					<outputDirectory>E:\development\wildfly-12.0.0.Final\standalone\deployments</outputDirectory>
+					<outputDirectory>D:\development\wildfly-12.0.0.Final\standalone\deployments</outputDirectory>
 					<modules>
 						<ejbModule>
 							<groupId>LearningEJB</groupId>
