--- a/LearningEJB/pom.xml
+++ b/LearningEJB/pom.xml
@@ -6,14 +6,14 @@
     <packaging>ejb</packaging>
     <build>
         <sourceDirectory>ejbModule</sourceDirectory>
-        <resources>
+        <java.resources>
             <resource>
                 <directory>ejbModule</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
             </resource>
-        </resources>
+        </java.resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
